Compiler/MAlice/antlr-generated/malice_grammar/malice_grammarParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g 2012-11-26 11:51:24

  package malice_grammar ;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class malice_grammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NUMBER", "IDENT", "WS", "LINE_COMMENT", "LETTER", "STRING", "'('", "')'", "'\\'s'", "'piece'", "'number'", "'letter'", "'sentence'", "'!'", "'~'", "'-'", "'+'", "'*'", "'/'", "'%'", "'<='", "'<'", "'>'", "'>='", "'=='", "'!='", "'&'", "'^'", "'|'", "'&&'", "'||'", "'perhaps'", "'so'", "'or'", "'maybe'", "'because'", "'Alice'", "'was'", "'unsure'", "'which'", "'either'", "'eventually'", "'enough'", "'times'", "'.'", "'a'", "'too'", "'of'", "'had'", "','", "'spoke'", "'said'", "'became'", "'ate'", "'drank'", "'found'", "'what'", "'?'", "'and'", "'then'", "'but'", "'spider'", "'opened'", "'closed'", "'The'", "'looking'", "'glass'", "'room'", "'contained'"
    };
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__29=29;
    public static final int T__65=65;
    public static final int T__28=28;
    public static final int T__62=62;
    public static final int T__27=27;
    public static final int T__63=63;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int LETTER=8;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int T__61=61;
    public static final int T__60=60;
    public static final int EOF=-1;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__19=19;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__51=51;
    public static final int T__16=16;
    public static final int T__52=52;
    public static final int T__15=15;
    public static final int T__53=53;
    public static final int T__18=18;
    public static final int T__54=54;
    public static final int T__17=17;
    public static final int T__12=12;
    public static final int T__11=11;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int T__59=59;
    public static final int T__10=10;
    public static final int IDENT=5;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int LINE_COMMENT=7;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int NUMBER=4;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=6;
    public static final int T__71=71;
    public static final int T__33=33;
    public static final int T__72=72;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__70=70;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int STRING=9;

    // delegates
    // delegators


        public malice_grammarParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public malice_grammarParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return malice_grammarParser.tokenNames; }
    public String getGrammarFileName() { return "/homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g"; }


    public static class lpar_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "lpar"
    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:29:1: lpar : '(' ;
    public final malice_grammarParser.lpar_return lpar() throws RecognitionException {
        malice_grammarParser.lpar_return retval = new malice_grammarParser.lpar_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal1=null;

        CommonTree char_literal1_tree=null;

        try {
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:29:5: ( '(' )
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:29:7: '('
            {
            root_0 = (CommonTree)adaptor.nil();

            char_literal1=(Token)match(input,10,FOLLOW_10_in_lpar213); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            char_literal1_tree = (CommonTree)adaptor.create(char_literal1);
            adaptor.addChild(root_0, char_literal1_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "lpar"

    public static class rpar_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "rpar"
    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:30:1: rpar : ')' ;
    public final malice_grammarParser.rpar_return rpar() throws RecognitionException {
        malice_grammarParser.rpar_return retval = new malice_grammarParser.rpar_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal2=null;

        CommonTree char_literal2_tree=null;

        try {
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:30:5: ( ')' )
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:30:7: ')'
            {
            root_0 = (CommonTree)adaptor.nil();

            char_literal2=(Token)match(input,11,FOLLOW_11_in_rpar220); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            char_literal2_tree = (CommonTree)adaptor.create(char_literal2);
            adaptor.addChild(root_0, char_literal2_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "rpar"

    public static class array_elem_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "array_elem"
    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:31:1: array_elem : IDENT '\\'s' expr 'piece' ;
    public final malice_grammarParser.array_elem_return array_elem() throws RecognitionException {
        malice_grammarParser.array_elem_return retval = new malice_grammarParser.array_elem_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDENT3=null;
        Token string_literal4=null;
        Token string_literal6=null;
        malice_grammarParser.expr_return expr5 = null;


        CommonTree IDENT3_tree=null;
        CommonTree string_literal4_tree=null;
        CommonTree string_literal6_tree=null;

        try {
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:31:12: ( IDENT '\\'s' expr 'piece' )
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:31:14: IDENT '\\'s' expr 'piece'
            {
            root_0 = (CommonTree)adaptor.nil();

            IDENT3=(Token)match(input,IDENT,FOLLOW_IDENT_in_array_elem228); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            IDENT3_tree = (CommonTree)adaptor.create(IDENT3);
            adaptor.addChild(root_0, IDENT3_tree);
            }
            string_literal4=(Token)match(input,12,FOLLOW_12_in_array_elem230); if (state.failed) return retval;
            pushFollow(FOLLOW_expr_in_array_elem233);
            expr5=expr();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, expr5.getTree());
            string_literal6=(Token)match(input,13,FOLLOW_13_in_array_elem235); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            string_literal6_tree = (CommonTree)adaptor.create(string_literal6);
            adaptor.addChild(root_0, string_literal6_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "array_elem"

    public static class atom_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "atom"
    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:32:1: atom : ( IDENT ( '\\'s' expr 'piece' )? | NUMBER | function_call );
    public final malice_grammarParser.atom_return atom() throws RecognitionException {
        malice_grammarParser.atom_return retval = new malice_grammarParser.atom_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDENT7=null;
        Token string_literal8=null;
        Token string_literal10=null;
        Token NUMBER11=null;
        malice_grammarParser.expr_return expr9 = null;

        malice_grammarParser.function_call_return function_call12 = null;


        CommonTree IDENT7_tree=null;
        CommonTree string_literal8_tree=null;
        CommonTree string_literal10_tree=null;
        CommonTree NUMBER11_tree=null;

        try {
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:32:5: ( IDENT ( '\\'s' expr 'piece' )? | NUMBER | function_call )
            int alt2=3;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==IDENT) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==EOF||(LA2_1>=11 && LA2_1<=16)||(LA2_1>=19 && LA2_1<=34)||LA2_1==48||(LA2_1>=53 && LA2_1<=55)||(LA2_1>=62 && LA2_1<=64)) ) {
                    alt2=1;
                }
                else if ( (LA2_1==10) ) {
                    alt2=3;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA2_0==NUMBER) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:32:7: IDENT ( '\\'s' expr 'piece' )?
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    IDENT7=(Token)match(input,IDENT,FOLLOW_IDENT_in_atom241); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IDENT7_tree = (CommonTree)adaptor.create(IDENT7);
                    adaptor.addChild(root_0, IDENT7_tree);
                    }
                    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:32:13: ( '\\'s' expr 'piece' )?
                    int alt1=2;
                    int LA1_0 = input.LA(1);

                    if ( (LA1_0==12) ) {
                        alt1=1;
                    }
                    switch (alt1) {
                        case 1 :
                            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:32:14: '\\'s' expr 'piece'
                            {
                            string_literal8=(Token)match(input,12,FOLLOW_12_in_atom244); if (state.failed) return retval;
                            pushFollow(FOLLOW_expr_in_atom247);
                            expr9=expr();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) adaptor.addChild(root_0, expr9.getTree());
                            string_literal10=(Token)match(input,13,FOLLOW_13_in_atom249); if (state.failed) return retval;
                            if ( state.backtracking==0 ) {
                            string_literal10_tree = (CommonTree)adaptor.create(string_literal10);
                            adaptor.addChild(root_0, string_literal10_tree);
                            }

                            }
                            break;

                    }


                    }
                    break;
                case 2 :
                    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:32:38: NUMBER
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    NUMBER11=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_atom255); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    NUMBER11_tree = (CommonTree)adaptor.create(NUMBER11);
                    adaptor.addChild(root_0, NUMBER11_tree);
                    }

                    }
                    break;
                case 3 :
                    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:32:47: function_call
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_function_call_in_atom259);
                    function_call12=function_call();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, function_call12.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "atom"

    public static class data_types_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "data_types"
    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:34:1: data_types : ( 'number' | 'letter' | 'sentence' );
    public final malice_grammarParser.data_types_return data_types() throws RecognitionException {
        malice_grammarParser.data_types_return retval = new malice_grammarParser.data_types_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set13=null;

        CommonTree set13_tree=null;

        try {
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:34:12: ( 'number' | 'letter' | 'sentence' )
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:
            {
            root_0 = (CommonTree)adaptor.nil();

            set13=(Token)input.LT(1);
            if ( (input.LA(1)>=14 && input.LA(1)<=16) ) {
                input.consume();
                if ( state.backtracking==0 ) adaptor.addChild(root_0, (CommonTree)adaptor.create(set13));
                state.errorRecovery=false;state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "data_types"

    public static class term_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "term"
    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:36:1: term : ( atom | lpar expr rpar );
    public final malice_grammarParser.term_return term() throws RecognitionException {
        malice_grammarParser.term_return retval = new malice_grammarParser.term_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        malice_grammarParser.atom_return atom14 = null;

        malice_grammarParser.lpar_return lpar15 = null;

        malice_grammarParser.expr_return expr16 = null;

        malice_grammarParser.rpar_return rpar17 = null;



        try {
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:36:6: ( atom | lpar expr rpar )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=NUMBER && LA3_0<=IDENT)) ) {
                alt3=1;
            }
            else if ( (LA3_0==10) ) {
                alt3=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:36:8: atom
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_atom_in_term285);
                    atom14=atom();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, atom14.getTree());

                    }
                    break;
                case 2 :
                    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:36:15: lpar expr rpar
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_lpar_in_term289);
                    lpar15=lpar();

                    state._fsp--;
                    if (state.failed) return retval;
                    pushFollow(FOLLOW_expr_in_term292);
                    expr16=expr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expr16.getTree());
                    pushFollow(FOLLOW_rpar_in_term294);
                    rpar17=rpar();

                    state._fsp--;
                    if (state.failed) return retval;

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "term"

    public static class bool_neg_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "bool_neg"
    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:37:1: bool_neg : ( '!' )* term ;
    public final malice_grammarParser.bool_neg_return bool_neg() throws RecognitionException {
        malice_grammarParser.bool_neg_return retval = new malice_grammarParser.bool_neg_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal18=null;
        malice_grammarParser.term_return term19 = null;


        CommonTree char_literal18_tree=null;

        try {
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:37:10: ( ( '!' )* term )
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:37:12: ( '!' )* term
            {
            root_0 = (CommonTree)adaptor.nil();

            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:37:12: ( '!' )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==17) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:37:13: '!'
            	    {
            	    char_literal18=(Token)match(input,17,FOLLOW_17_in_bool_neg304); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    char_literal18_tree = (CommonTree)adaptor.create(char_literal18);
            	    root_0 = (CommonTree)adaptor.becomeRoot(char_literal18_tree, root_0);
            	    }

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            pushFollow(FOLLOW_term_in_bool_neg309);
            term19=term();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, term19.getTree());

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "bool_neg"

    public static class unary_op_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "unary_op"
    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:38:1: unary_op : ( '~' | '-' | '+' )* bool_neg ;
    public final malice_grammarParser.unary_op_return unary_op() throws RecognitionException {
        malice_grammarParser.unary_op_return retval = new malice_grammarParser.unary_op_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal20=null;
        Token char_literal21=null;
        Token char_literal22=null;
        malice_grammarParser.bool_neg_return bool_neg23 = null;


        CommonTree char_literal20_tree=null;
        CommonTree char_literal21_tree=null;
        CommonTree char_literal22_tree=null;

        try {
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:38:10: ( ( '~' | '-' | '+' )* bool_neg )
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:38:12: ( '~' | '-' | '+' )* bool_neg
            {
            root_0 = (CommonTree)adaptor.nil();

            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:38:12: ( '~' | '-' | '+' )*
            loop5:
            do {
                int alt5=4;
                switch ( input.LA(1) ) {
                case 18:
                    {
                    alt5=1;
                    }
                    break;
                case 19:
                    {
                    alt5=2;
                    }
                    break;
                case 20:
                    {
                    alt5=3;
                    }
                    break;

                }

                switch (alt5) {
            	case 1 :
            	    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:38:13: '~'
            	    {
            	    char_literal20=(Token)match(input,18,FOLLOW_18_in_unary_op317); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    char_literal20_tree = (CommonTree)adaptor.create(char_literal20);
            	    root_0 = (CommonTree)adaptor.becomeRoot(char_literal20_tree, root_0);
            	    }

            	    }
            	    break;
            	case 2 :
            	    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:38:20: '-'
            	    {
            	    char_literal21=(Token)match(input,19,FOLLOW_19_in_unary_op322); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    char_literal21_tree = (CommonTree)adaptor.create(char_literal21);
            	    root_0 = (CommonTree)adaptor.becomeRoot(char_literal21_tree, root_0);
            	    }

            	    }
            	    break;
            	case 3 :
            	    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:38:27: '+'
            	    {
            	    char_literal22=(Token)match(input,20,FOLLOW_20_in_unary_op327); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    char_literal22_tree = (CommonTree)adaptor.create(char_literal22);
            	    root_0 = (CommonTree)adaptor.becomeRoot(char_literal22_tree, root_0);
            	    }

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            pushFollow(FOLLOW_bool_neg_in_unary_op332);
            bool_neg23=bool_neg();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, bool_neg23.getTree());

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "unary_op"

    public static class mult_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "mult"
    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:39:1: mult : unary_op ( ( '*' | '/' | '%' ) unary_op )* ;
    public final malice_grammarParser.mult_return mult() throws RecognitionException {
        malice_grammarParser.mult_return retval = new malice_grammarParser.mult_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal25=null;
        Token char_literal26=null;
        Token char_literal27=null;
        malice_grammarParser.unary_op_return unary_op24 = null;

        malice_grammarParser.unary_op_return unary_op28 = null;


        CommonTree char_literal25_tree=null;
        CommonTree char_literal26_tree=null;
        CommonTree char_literal27_tree=null;

        try {
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:39:6: ( unary_op ( ( '*' | '/' | '%' ) unary_op )* )
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:39:7: unary_op ( ( '*' | '/' | '%' ) unary_op )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_unary_op_in_mult339);
            unary_op24=unary_op();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, unary_op24.getTree());
            // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:39:16: ( ( '*' | '/' | '%' ) unary_op )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( ((LA7_0>=21 && LA7_0<=23)) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:39:17: ( '*' | '/' | '%' ) unary_op
            	    {
            	    // /homes/mg2111/malice/Compiler/MAlice/src/malice_grammar/malice_grammar.g:39:17: ( '*' | '/' | '%' )
            	    int alt6=3;
            	    switch ( input.LA(1) ) {
            	    case 21:
            	        {
            	        alt6=1;
            	        }
            	        break;
            	    case 22:
            	        {
            	        alt6=2;
            	        }
            	        break;
            	    case 23:
            	        {
            	        alt6=3;
            	        }
            	        break;
            	    default:
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 6, 0, input);

            	        throw nvae;
            	    }
